--- a/SegmentedToday/Storyboards & Nibs/MainInterface.storyboard
+++ b/SegmentedToday/Storyboards & Nibs/MainInterface.storyboard
@@ -26,9 +26,12 @@
                                     <action selector="segmentChanged:" destination="M4Y-Lb-cyx" eventType="valueChanged" id="B3c-Og-bdK"/>
                                 </connections>
                             </segmentedControl>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="MlL-DZ-ONr">
-                                <rect key="frame" x="0.0" y="44" width="320" height="161"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="MlL-DZ-ONr">
+                                <rect key="frame" x="0.0" y="44" width="320" height="150"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" relation="lessThanOrEqual" constant="150" id="H6j-sD-4Rj"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell contentMode="scaleToFill" selectionStyle="none" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="todayCell" id="AtI-p1-BMw">
                                         <autoresizingMask key="autoresizingMask"/>
@@ -49,15 +52,15 @@
                             </button>
                         </subviews>
                         <constraints>
-                            <constraint firstAttribute="centerX" secondItem="hw8-KH-7Cp" secondAttribute="centerX" id="0ph-jE-Uvi"/>
-                            <constraint firstAttribute="trailing" secondItem="MlL-DZ-ONr" secondAttribute="trailing" id="Dez-zr-IdV"/>
-                            <constraint firstItem="MlL-DZ-ONr" firstAttribute="top" secondItem="HXB-jF-kTN" secondAttribute="bottom" constant="8" id="RKT-Z6-7gd"/>
-                            <constraint firstAttribute="trailing" secondItem="HXB-jF-kTN" secondAttribute="trailing" constant="8" id="TeU-QT-Zzf"/>
-                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="hw8-KH-7Cp" secondAttribute="bottom" constant="8" id="Tgf-3F-G4z"/>
-                            <constraint firstItem="hw8-KH-7Cp" firstAttribute="top" secondItem="MlL-DZ-ONr" secondAttribute="bottom" constant="7" id="eFP-WD-A4F"/>
-                            <constraint firstItem="MlL-DZ-ONr" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" id="h5e-Wc-CXr"/>
-                            <constraint firstItem="HXB-jF-kTN" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" constant="8" id="ngK-a3-75C"/>
-                            <constraint firstItem="HXB-jF-kTN" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="8" id="zAX-fc-xsa"/>
+                            <constraint firstItem="hw8-KH-7Cp" firstAttribute="top" secondItem="MlL-DZ-ONr" secondAttribute="bottom" priority="250" constant="7" id="KRW-FU-Lse"/>
+                            <constraint firstItem="MlL-DZ-ONr" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" id="SJ1-6R-PAU"/>
+                            <constraint firstItem="MlL-DZ-ONr" firstAttribute="top" secondItem="HXB-jF-kTN" secondAttribute="bottom" constant="8" id="UZA-u8-18C"/>
+                            <constraint firstItem="HXB-jF-kTN" firstAttribute="leading" secondItem="S3S-Oj-5AN" secondAttribute="leading" constant="8" id="X5x-2t-jKf"/>
+                            <constraint firstAttribute="centerX" secondItem="hw8-KH-7Cp" secondAttribute="centerX" id="XFe-kM-Ilq"/>
+                            <constraint firstItem="FKl-LY-JtV" firstAttribute="top" secondItem="hw8-KH-7Cp" secondAttribute="bottom" constant="8" id="aDe-11-8VL"/>
+                            <constraint firstAttribute="trailing" secondItem="HXB-jF-kTN" secondAttribute="trailing" constant="8" id="kIf-1h-6KT"/>
+                            <constraint firstAttribute="trailing" secondItem="MlL-DZ-ONr" secondAttribute="trailing" id="oeV-an-jIU"/>
+                            <constraint firstItem="HXB-jF-kTN" firstAttribute="top" secondItem="Ft6-oW-KC0" secondAttribute="bottom" constant="8" id="ttg-G9-JkZ"/>
                         </constraints>
                     </view>
                     <extendedEdge key="edgesForExtendedLayout"/>
