--- a/AppExtensionsDemo/Storyboards & Nibs/Base.lproj/Main.storyboard
+++ b/AppExtensionsDemo/Storyboards & Nibs/Base.lproj/Main.storyboard
@@ -18,10 +18,10 @@
             </objects>
             <point key="canvasLocation" x="-549" y="340"/>
         </scene>
-        <!--Items-->
+        <!--Items View Controller-->
         <scene sceneID="n9t-c8-YCa">
             <objects>
-                <tableViewController storyboardIdentifier="TodoViewController" title="Items" id="gA6-89-Iq9" customClass="TodoViewController" customModule="AppExtensionsDemo" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="TodoViewController" title="Items View Controller" id="gA6-89-Iq9" customClass="TodoViewController" customModule="AppExtensionsDemo" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="9ug-ZF-6Aj">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -58,10 +58,65 @@
                             <outlet property="delegate" destination="gA6-89-Iq9" id="GP6-aS-QIf"/>
                         </connections>
                     </tableView>
+                    <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Items" id="VFv-RT-ARt">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="6XW-5e-Sa8">
+                            <connections>
+                                <segue destination="oa0-c0-bwy" kind="presentation" id="XNl-UP-2kw"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="42F-Rl-aKi" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="940" y="344"/>
+        </scene>
+        <!--New Item View Controller-->
+        <scene sceneID="4AY-Yp-ivy">
+            <objects>
+                <viewController title="New Item View Controller" id="oa0-c0-bwy" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="iVz-ix-6Uf"/>
+                        <viewControllerLayoutGuide type="bottom" id="oZl-jN-rYO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="wQh-aC-ySX">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ntW-QT-lVt">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="64"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="64" id="cOd-FN-tr8"/>
+                                </constraints>
+                                <items>
+                                    <navigationItem title="Add New Item" id="ZNa-5q-GNa">
+                                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="Lg8-Qa-74d">
+                                            <connections>
+                                                <segue destination="vEY-9a-y8Q" kind="unwind" unwindAction="unwindForSegue:towardsViewController:" id="CE5-ON-373"/>
+                                            </connections>
+                                        </barButtonItem>
+                                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="TGK-5h-nIh">
+                                            <connections>
+                                                <segue destination="vEY-9a-y8Q" kind="unwind" unwindAction="unwindForSegue:towardsViewController:" id="38a-1E-1S9"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="ntW-QT-lVt" firstAttribute="top" secondItem="wQh-aC-ySX" secondAttribute="top" id="5DK-W4-Bb9"/>
+                            <constraint firstItem="ntW-QT-lVt" firstAttribute="leading" secondItem="wQh-aC-ySX" secondAttribute="leading" id="Oy5-hG-7nC"/>
+                            <constraint firstAttribute="trailing" secondItem="ntW-QT-lVt" secondAttribute="trailing" id="jx9-rd-fcp"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wfc-27-HS7" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <exit id="vEY-9a-y8Q" userLabel="Exit" sceneMemberID="exit"/>
+            </objects>
+            <point key="canvasLocation" x="1645" y="344"/>
         </scene>
     </scenes>
 </document>
