--- a/TodoWatch/Base.lproj/Interface.storyboard
+++ b/TodoWatch/Base.lproj/Interface.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
+<document type="com.apple.InterfaceBuilder.WatchKit.Storyboard" version="3.0" toolsVersion="8191" systemVersion="15A284" targetRuntime="watchKit" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="AgC-eL-Hgc">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBWatchKitPlugin" version="8092"/>
@@ -15,7 +15,9 @@
                                 <tableRow identifier="TodoItemRow" id="fBf-8y-iUZ" customClass="TodoItemsRowController" customModule="TodoWatch_Extension">
                                     <group key="rootItem" width="1" alignment="left" id="kwP-JL-FNg">
                                         <items>
-                                            <label alignment="center" verticalAlignment="center" text="Label" id="2hY-lN-oG6"/>
+                                            <label alignment="center" verticalAlignment="center" text="Label" id="2hY-lN-oG6">
+                                                <fontDescription key="font" type="system" pointSize="16"/>
+                                            </label>
                                         </items>
                                     </group>
                                     <connections>
@@ -25,6 +27,16 @@
                             </items>
                         </table>
                     </items>
+                    <menu key="menu" id="4rd-fp-gXJ">
+                        <items>
+                            <menuItem title="Clear" icon="trash" id="7Zu-1W-UZI">
+                                <connections>
+                                    <action selector="onClearDoneItems" destination="AgC-eL-Hgc" id="tov-3x-ay0"/>
+                                </connections>
+                            </menuItem>
+                            <menuItem title="Cancel" icon="decline" id="TnZ-Dh-J2l"/>
+                        </items>
+                    </menu>
                     <connections>
                         <outlet property="itemsTable" destination="maT-w7-3XU" id="Ok2-vH-qZN"/>
                     </connections>
